[gd_scene load_steps=12 format=3 uid="uid://dpjlvk16xkjpu"]

[ext_resource type="Script" path="res://scripts/result_screen.gd" id="1_s2m8r"]
[ext_resource type="FontFile" uid="uid://ba1rok5vimfsm" path="res://fonts/Dimbo Regular.ttf" id="1_u5b03"]
[ext_resource type="Texture2D" uid="uid://buvum3pdjxbfp" path="res://UI/button_rectangle_depth_border.png" id="2_gmkg3"]
[ext_resource type="Texture2D" uid="uid://dpgwelbmufmqk" path="res://UI/button_rectangle_gloss.png" id="3_jdrc7"]
[ext_resource type="Texture2D" uid="uid://cn2fl2bjywgfl" path="res://UI/button_rectangle_depth_gloss.png" id="4_6bciq"]
[ext_resource type="Texture2D" uid="uid://bppsiolytg5fe" path="res://UI/title_STB.png" id="5_6tslc"]
[ext_resource type="Script" path="res://scripts/audio_button.gd" id="6_5v5sg"]
[ext_resource type="AudioStream" uid="uid://dactm4q2p4ew5" path="res://sounds/Menu_Sounds_V2_Minimalistic_HOVER.mp3" id="7_x8c4g"]
[ext_resource type="AudioStream" uid="uid://b2p8bl48of2m0" path="res://sounds/Menu_Sounds_V2_Minimalistic_FORWARD.mp3" id="8_0rhxw"]
[ext_resource type="AudioStream" uid="uid://w34m6u5omrnx" path="res://sounds/Menu_Sounds_V2_Minimalistic_UNPAUSE.mp3" id="10_rui33"]
[ext_resource type="AudioStream" uid="uid://dh4q1x0uqwocr" path="res://sounds/Menu_Sounds_V2_Minimalistic_SAVE_SAVEFILE.mp3" id="11_83cyg"]

[node name="ResultScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2m8r")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 810.0
offset_top = 520.0
offset_right = 1110.0
offset_bottom = 828.0

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("1_u5b03")
theme_override_font_sizes/font_size = 77
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="RestartButton" type="TextureButton" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("2_gmkg3")
texture_pressed = ExtResource("3_jdrc7")
texture_hover = ExtResource("4_6bciq")
texture_disabled = ExtResource("2_gmkg3")
texture_focused = ExtResource("4_6bciq")
stretch_mode = 0
script = ExtResource("6_5v5sg")
hover_sound = ExtResource("7_x8c4g")
click_sound = ExtResource("8_0rhxw")

[node name="RestartLabel" type="Label" parent="CenterContainer/RestartButton"]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 299.0
offset_bottom = 98.0
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("1_u5b03")
theme_override_font_sizes/font_size = 42
text = "RESTART"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="TextureButton" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("2_gmkg3")
texture_pressed = ExtResource("3_jdrc7")
texture_hover = ExtResource("4_6bciq")
texture_disabled = ExtResource("2_gmkg3")
texture_focused = ExtResource("4_6bciq")
stretch_mode = 0
script = ExtResource("6_5v5sg")
hover_sound = ExtResource("7_x8c4g")
click_sound = ExtResource("8_0rhxw")

[node name="MenuLabel" type="Label" parent="CenterContainer/MenuButton"]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 299.0
offset_bottom = 98.0
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("1_u5b03")
theme_override_font_sizes/font_size = 42
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLogo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 422.0
offset_right = 1766.0
offset_bottom = 768.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_6tslc")
expand_mode = 1

[node name="WinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rui33")

[node name="LoseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_83cyg")
